# vocal-doubler

./: .gitignore  CMakeLists.txt  README.md  Setup.bat  build.bat  install.ps1  setup.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Ui/: PlateLookAndFeel.cpp  PlateLookAndFeel.h
